[gd_scene load_steps=6 format=2]

[ext_resource path="res://core/menu/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://core/menu/main.gd" type="Script" id=8]
[ext_resource path="res://core/menu/font_small.tres" type="DynamicFont" id=10]
[ext_resource path="res://core/menu/button/button.tscn" type="PackedScene" id=11]
[ext_resource path="res://core/menu/dialog/independent_panel.tscn" type="PackedScene" id=12]

[node name="Main" type="Node"]

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
theme = ExtResource( 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Main" parent="GUI" instance=ExtResource( 12 )]
margin_left = 40.733
margin_top = 44.3442
margin_right = 40.733
margin_bottom = 254.344
title = "Own War"

[node name="Version" type="Label" parent="GUI/Main"]
margin_left = 220.401
margin_top = -12.6697
margin_right = 311.401
margin_bottom = 16.3303
custom_fonts/font = ExtResource( 10 )
text = "0.0.0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Main"]
margin_left = 40.0
margin_top = 40.0
margin_right = 305.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Designer" parent="GUI/Main/VBoxContainer" instance=ExtResource( 11 )]
margin_right = 265.0
text = "Designer"

[node name="Settings" parent="GUI/Main/VBoxContainer" instance=ExtResource( 11 )]
margin_top = 51.0
margin_right = 265.0
margin_bottom = 92.6293
text = "Settings"

[node name="Exit" parent="GUI/Main/VBoxContainer" instance=ExtResource( 11 )]
margin_top = 102.0
margin_right = 265.0
margin_bottom = 143.629
text = "Exit"

[node name="Background" type="Node" parent="."]
[connection signal="pressed" from="GUI/Main/VBoxContainer/Designer" to="GUI" method="_on_Designer_pressed"]
[connection signal="pressed" from="GUI/Main/VBoxContainer/Settings" to="GUI" method="_on_Settings_pressed"]
[connection signal="pressed" from="GUI/Main/VBoxContainer/Exit" to="GUI" method="_on_Exit_pressed"]
